--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,24 @@ img {
     display: block;
 }
 
+.container {
+    width: 1220px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin: 0 auto;
+}
+
+
+.header-list {
+    display: flex;
+    gap: 40px;
+margin-left: 485px;
+}
+
 .header-logo {
     width: 177px;
 height: 50px;
+
 }
 
 .header-link {
