--- a/css/style.css
+++ b/css/style.css
@@ -284,14 +284,25 @@ background-size: cover;
     margin-left: auto;
 }
 
+.card {
+   background-color: var(--site-color);
+}
+
 .card-item {
     width: 354px;
 height: 287px;
 border-radius: 30px;
 background: var(--background-color);
+align-items: center;
+padding: 50px 75px 45px 35px;
+}
+
+.card-box {
+
 }
 
 .card-title {
+    width: 479px;
     color: var(--accent-color);
 text-align: center;
 font-family: "DM Serif Display";
@@ -310,6 +321,23 @@ letter-spacing: 0.22px;
     letter-spacing: 0.22px;
 }
 
+.card-span {
+    width: 285px;
+    color: var(--accent-color);
+text-align: center;
+font-family: "DM Serif Display";
+font-size: 45px;
+font-weight: 400;
+line-height: 1.3; 
+letter-spacing: 0.22px;
+}
+
+.card-list {
+    display: flex;
+    gap: 18px;
+    margin-top: 47px;
+}
+
 .card-text {
     color: var(--minor-color);
     font-family: "Jost";
@@ -326,6 +354,7 @@ letter-spacing: 0.22px;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.22px;
+    width: 256px;
 }
 
 .reccent-title {
