--- a/css/style.css
+++ b/css/style.css
@@ -286,6 +286,9 @@ background-size: cover;
 
 .card {
    background-color: var(--site-color);
+   padding-top: 103px;
+   padding-bottom: 121px;
+   border-radius: 70px;
 }
 
 .card-item {
@@ -298,7 +301,12 @@ padding: 50px 75px 45px 35px;
 }
 
 .card-box {
+ margin-left: 20px;
+}
 
+.card-bax {
+ display: flex;
+ align-items: center;
 }
 
 .card-title {
@@ -310,6 +318,8 @@ font-size: 45px;
 font-weight: 400;
 line-height: 1.3;
 letter-spacing: 0.22px;
+margin-right: auto;
+margin-left: auto;
 }
 
 .card-paragrah {
@@ -336,6 +346,7 @@ letter-spacing: 0.22px;
     display: flex;
     gap: 18px;
     margin-top: 47px;
+    justify-content: center;
 }
 
 .card-text {
@@ -355,7 +366,37 @@ letter-spacing: 0.22px;
     line-height: 1.5;
     letter-spacing: 0.22px;
     width: 256px;
+    margin-top: 25px;
+
 }
+
+.logo {
+    padding-top: 140px;
+    padding-bottom: 113px;
+}
+
+.logo-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo-item:nth-child(1) {
+margin-right: 125px;
+}
+
+.logo-item:nth-child(2) {
+margin-right: 110px;
+}
+
+.logo-item:nth-child(3) {
+margin-right: 89px;
+}
+
+.logo-item:nth-child(4) {
+margin-right: 112px;
+}
+
 
 .reccent-title {
     color: var(--accent-color);
@@ -365,6 +406,7 @@ letter-spacing: 0.22px;
     font-weight: 400;
     line-height: 1.32;
     letter-spacing: 0.22px;
+    margin-bottom: 20px;
 }
 
 .reccent-text {
@@ -378,7 +420,35 @@ letter-spacing: 0.22px;
 }
 
 .reccent-desc {
-    color: #4D5053;
+    color: var(--minor-color);
+text-align: center;
+font-family: "Jost";
+font-size: 22px;
+font-weight: 400;
+line-height: 1.5; 
+letter-spacing: 0.22px;
+margin-bottom: 71px;
+}
+
+.room {
+    padding-bottom: 140px;
+}
+
+.room-list {
+    flex-wrap: wrap;
+    display: flex;
+    gap: 20px;
+}
+
+.room-box {
+    display: flex;
+    padding: 24px 0 60px 0;
+    align-items: center;
+    
+}
+
+.reccent-desc {
+    color: var(--minor-color);
     text-align: center;
     font-family: "Jost";
     font-size: 22px;
@@ -405,38 +475,64 @@ letter-spacing: 0.22px;
     letter-spacing: 0.22px;
 }
 
+.reccent-btn {
+    margin-left: auto;
+}
 
-.numbers-title {
-    color: var(--numbers-color);
-    text-align: center;
-    font-family: "DM Serif Display";
-    font-size: 85px;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 1.7px;
+.numbers {
+    padding-top: 140px;
+    padding-bottom: 140px;
+    background-color: var(--site-color);
+}
+
+.numbers-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+}
+
+.numbers-item {
+    width: 288px;
+    height: 195px;
+    border-right: 1px solid var(--numbers-color);
+}
+
+.numbers-item:last-child {
+border-right: 0;
 }
 
 .numbers-text {
+    color: var(--numbers-color);
+font-family: "DM Serif Display";
+font-size: 85px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 1.7px;
+text-align: center;
+}
+
+.numbers-desc {
     color: var(--minor-color);
-    text-align: center;
-    font-family: "Jost";
-    font-size: 22px;
-    font-weight: 400;
-    line-height: 1.5; 
-    letter-spacing: 0.22px;
+text-align: center;
+font-size: 22px;
+font-weight: 400;
+line-height: 1.5; 
+letter-spacing: 0.22px;
 }
 
 .blogs-title {
     color: var(--accent-color);
-    text-align: center;
-    font-family: "DM Serif Display";
-    font-size: 48px;
-    font-weight: 400;
-    line-height: 1.3;
-    letter-spacing: 0.22px;
+text-align: center;
+font-family: "DM Serif Display";
+font-size: 48px;
+font-weight: 400;
+line-height: 1.3o;
+letter-spacing: 0.22px;
 }
 
 .blogs-text {
+    width: 589px;
     color: var(--minor-color);
     text-align: center;
     font-family: "Jost";
@@ -447,13 +543,14 @@ letter-spacing: 0.22px;
 }
 
 .blogs-desc {
+    width: 293px;
     color: var(--minor-color);
-    text-align: center;
-    font-family: "Jost";
-    font-size: 22px;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.22px;
+text-align: center;
+font-family: "Jost";
+font-size: 22px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.22px;
 }
 
 .letter-title {
@@ -472,6 +569,10 @@ letter-spacing: 0.22px;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.22px;
+}
+
+.wanna {
+    background-color: var(--accent-color);
 }
 
 .wanna-title {
@@ -495,8 +596,6 @@ letter-spacing: 0.22px;
 }
 
 .wanna-btn {
-    width: 241px;
-    height: 71px;
     fill: var(--numbers-color);
 stroke-width: 2px;
 stroke: var(--numbers-color);
@@ -534,7 +633,7 @@ letter-spacing: 0.22px;
 }
 
 .footer-text {
-    color: #4D5053;
+    color: var(--minor-color);
 text-align: center;
 font-family: "Jost";
 font-size: 22px;
@@ -544,7 +643,7 @@ letter-spacing: 0.22px;
 }
 
 .footer-span {
-    color: #CDA274;
+    color: var(--numbers-color);
 text-align: center;
 font-family: "Jost";
 font-size: 22px;
