--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,10 @@ img {
     margin: 0 auto;
 }
 
+body {
+    font-family: "Jost";
+}
+
 .header {
     padding-top: 26px;
     padding-bottom: 30px;
@@ -69,7 +73,6 @@ align-items: center;
 
 .header-link {
     color: var(--accent-color);
-font-family: "Jost";
 font-size: 19px;
 font-weight: 400;
 line-height: 1.57;
@@ -102,7 +105,6 @@ letter-spacing: 0.4px;
 
 .hero-text {
     color: var(--minor-color);
-    font-family: "Jost";
     font-size: 22px;
     font-weight: 400;
     line-height: 1.5;
@@ -111,7 +113,6 @@ letter-spacing: 0.4px;
 
 .hero-desc {
     color: var(--minor-color);
-    font-family: "Jost";
     font-size: 22px;
     font-style: normal;
     font-weight: 400;
@@ -122,9 +123,7 @@ letter-spacing: 0.4px;
 
 .hero-btn {
     color: var(--background-color);
-    font-family: "Jost";
     font-size: 18px;
-    font-style: normal;
     font-weight: 400;
     line-height: 27px;
     letter-spacing: 0.72px;
@@ -185,7 +184,6 @@ margin-left: 42px;
 .design-link {
     color: var(--minor-color);
     text-align: center;
-    font-family: "Jost";
     font-size: 18px;
     font-weight: 400;
     line-height: 1.5;
@@ -219,7 +217,6 @@ height: 17px;
 .tacle-text {
     width: 531px;
     color: var(--minor-color);
-    font-family: "Jost";
     font-size: 22px;
     font-weight: 400;
     line-height: 1.5;
@@ -229,7 +226,6 @@ height: 17px;
 .tacle-desc {
     width: 492px;
     color: var(--minor-color);
-    font-family: "Jost";
     font-size: 22px;
     font-weight: 400;
     line-height: 1.5;
@@ -245,9 +241,7 @@ height: 17px;
 
 .tacle-link {
     color: var(--minor-color);
-font-family: "Jost";
 font-size: 24px;
-font-style: normal;
 font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.22px;
@@ -255,9 +249,7 @@ letter-spacing: 0.22px;
 
 .tacle-p {
     color: var(--minor-color);
-    font-family: "Jost";
     font-size: 22px;
-    font-style: normal;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.22px;
@@ -351,7 +343,6 @@ letter-spacing: 0.22px;
 
 .card-text {
     color: var(--minor-color);
-    font-family: "Jost";
     font-size: 18px;
     font-weight: 400;
     line-height: 1.5; 
@@ -360,7 +351,6 @@ letter-spacing: 0.22px;
 
 .card-desc {
     color: var(--minor-color);
-    font-family: "Jost";
     font-size: 20px;
     font-weight: 400;
     line-height: 1.5;
@@ -412,7 +402,6 @@ margin-right: 112px;
 .reccent-text {
     color: var(--accent-color);
     text-align: center;
-    font-family: "Jost";
     font-size: 22px;
     font-weight: 400;
     line-height: 1.5;
@@ -422,7 +411,6 @@ margin-right: 112px;
 .reccent-desc {
     color: var(--minor-color);
 text-align: center;
-font-family: "Jost";
 font-size: 22px;
 font-weight: 400;
 line-height: 1.5; 
@@ -468,7 +456,6 @@ margin-bottom: 71px;
 
 .room-desc {
     color: var(--minor-color);
-    font-family: "Jost";
     font-size: 22px;
     font-weight: 400;
     line-height: 1.5;
@@ -504,7 +491,6 @@ border-right: 0;
 
 .figure-text {
     color: var(--numbers-color);
-font-family: "DM Serif Display";
 font-size: 85px;
 font-weight: 400;
 line-height: 1.5;
@@ -541,7 +527,6 @@ margin-bottom: 21px;
    
     color: var(--minor-color);
     text-align: center;
-    font-family: "Jost";
     font-size: 22px;
     font-weight: 400;
     line-height: 1.5;
@@ -551,7 +536,6 @@ margin-bottom: 21px;
 .blogs-desc {
     color: var(--minor-color);
 text-align: center;
-font-family: "Jost";
 font-size: 22px;
 font-weight: 400;
 line-height: 1.5;
@@ -646,7 +630,6 @@ margin-left: 45px;
 
 .letter-text {
     color: var(--minor-color);
-    font-family: "Jost";
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
@@ -683,7 +666,6 @@ margin-left: 45px;
 .wanna-text {
     color: var(--background-color);
     text-align: center;
-    font-family: "Jost";
     font-size: 22px;
     font-weight: 400;
     line-height: 1.5;
@@ -698,7 +680,6 @@ stroke: var(--numbers-color);
 filter: drop-shadow(1px 0px 18px rgba(0, 0, 0, 0.20));
 color: var(--background-color);
 text-align: center;
-font-family: "Jost";
 font-size: 18px;
 font-weight: 400;
 line-height: 1.5;
@@ -709,13 +690,19 @@ margin-left: 474px;
 
 .footer {
     padding-top: 80px;
+    padding-bottom: 80px;
 }
 
 
-.footer-letter {
+.bax {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
 }
+
+.footer-bax {
+   margin-right: 83px; 
+}
+
 
 .footer-title {
 color: var(--accent-color);
@@ -724,41 +711,74 @@ font-size: 25px;
 font-weight: 400;
 line-height: 1.5px;
 letter-spacing: 0.22px;
+margin-bottom: 31px;
 }
 
-.footer-a {
-color: var(--minor-color);
-font-family: "Jost";
+.list-link {
+    color: var(--minor-color);
 font-size: 22px;
 font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.22px;
+margin-bottom: 30px;
+}
+
+
+.footer-text {
+    width: 326px;
+    color: var(--minor-color);
+text-align: center;
+font-size: 22px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.22px;
+margin-top: 15px;
+margin-bottom: 29px;
+}
+
+.footer-box {
+    display: flex;
+    gap: 40px;
+}
+
+.footer-list {
+    display: flex;
+    gap: 60px;
+}
+
+.footer-item {
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-item:nth-child(3) {
+width: 321px;
+}
+
+.line {
+    width: 1440px;
+height: 1px;
+background: var(--interno-color);
+margin-right: auto;
+margin-left: auto;
+margin-top: 111px;
 }
 
 .footer-desc {
-    width: 326px;
-    color: var(--minor-color);
-font-family: "Jost";
-font-size: 22px;
-font-weight: 400;
-line-height: 1.5; 
-letter-spacing: 0.22px;
-}
-
-.footer-text {
     color: var(--minor-color);
 text-align: center;
-font-family: "Jost";
 font-size: 22px;
+font-style: normal;
 font-weight: 400;
-line-height: 1.5;
+line-height: 33px;
 letter-spacing: 0.22px;
+margin-top: 35px;
 }
 
 .footer-span {
     color: var(--numbers-color);
 text-align: center;
-font-family: "Jost";
 font-size: 22px;
 font-weight: 400;
 line-height: 1.5; 
