--- a/css/style.css
+++ b/css/style.css
@@ -418,6 +418,19 @@ letter-spacing: 0.22px;
 margin-bottom: 71px;
 }
 
+.reccent-btn {
+    margin-left: auto;
+}
+
+.reccent-desc {
+    color: var(--minor-color);
+    text-align: center;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.22px;
+}
+
 .room {
     padding-bottom: 140px;
 }
@@ -428,6 +441,14 @@ margin-bottom: 71px;
     gap: 20px;
 }
 
+.room-item {
+    flex-basis: calc((100% - 20px) / 2);
+}
+
+.room-img {
+    width: 100%;
+}
+
 .room-box {
     display: flex;
     padding: 24px 0 60px 0;
@@ -435,15 +456,6 @@ margin-bottom: 71px;
     
 }
 
-.reccent-desc {
-    color: var(--minor-color);
-    text-align: center;
-    font-family: "Jost";
-    font-size: 22px;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.22px;
-}
 
 .room-title {
     color: var(--accent-color);
@@ -462,9 +474,7 @@ margin-bottom: 71px;
     letter-spacing: 0.22px;
 }
 
-.reccent-btn {
-    margin-left: auto;
-}
+
 
 .figure {
     padding-top: 140px;
