--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,7 @@ height: 17px;
     display: flex;
     align-items: center;
     gap: 20px;
+
 }
 
 .tacle-link {
@@ -245,6 +246,7 @@ font-size: 24px;
 font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.22px;
+margin-left: 20px;
 }
 
 .tacle-p {
@@ -253,6 +255,7 @@ letter-spacing: 0.22px;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.22px;
+    margin-left: 20px;
 }
 
 .tacle-btn {
