--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,13 @@ height: 17px;
 
 }
 
+.bax {
+    display: flex;
+    flex-direction: column;
+}
+
+
+
 .tacle-link {
     color: var(--minor-color);
 font-size: 24px;
