--- a/css/style.css
+++ b/css/style.css
@@ -579,7 +579,7 @@ letter-spacing: 0.22px;
     height: 515px;
 border-radius: 62px;
 border: 1px solid var(--hero-color);
-background-image: url(../images/kitchen-Design.jpg);
+background-image: url(../images/kitchen-desing-two.png);
 background-repeat: no-repeat;
 background-position: 21px 21px;
 }
