--- a/css/style.css
+++ b/css/style.css
@@ -448,7 +448,8 @@ margin-bottom: 71px;
 .room-list {
     flex-wrap: wrap;
     display: flex;
-    gap: 20px;
+    column-gap: 20px;
+    row-gap: 60px;
 }
 
 .room-item {
@@ -667,6 +668,7 @@ margin-left: 45px;
 }
 
 .wanna {
+    text-align: center;
     background-color: var(--accent-color);
     padding-top: 100px;
     padding-bottom: 95px;
@@ -705,7 +707,7 @@ font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.22px;
 margin-right: auto;
-margin-left: 474px;
+
 }
 
 .footer {
@@ -771,6 +773,10 @@ margin-bottom: 29px;
     width: 150px;
     display: flex;
     flex-direction: column;
+}
+
+.list-link:nth-last-child(1) {
+margin-bottom: 0;
 }
 
 .footer-item:nth-child(3) {
